[gd_scene load_steps=17 format=2]

[ext_resource path="res://Enemies/crow/Crow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/crow/Crow.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 204, 217 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 217, 204, 217 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 434, 204, 217 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 651, 204, 217 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 868, 204, 217 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1085, 204, 217 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1302, 204, 217 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1519, 204, 217 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1736, 204, 217 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Fly",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 64, 24 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 20, 255 )

[sub_resource type="RectangleShape2D" id=15]

[sub_resource type="Animation" id=12]
resource_name = "Crow"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CrowBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1500, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CrowBody/AnimatedSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Crow" type="Node2D"]
script = ExtResource( 2 )

[node name="CrowBody" type="KinematicBody2D" parent="."]
position = Vector2( 110.681, 0 )
collision_layer = 0
collision_mask = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="CrowBody"]
frames = SubResource( 10 )
animation = "Fly"
speed_scale = 2.5
playing = true

[node name="body" type="Area2D" parent="CrowBody"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrowBody/body"]
position = Vector2( 0.869995, 24 )
shape = SubResource( 13 )

[node name="shitzone" type="Area2D" parent="CrowBody"]
position = Vector2( 0.319099, 24 )
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrowBody/shitzone"]
position = Vector2( -3.0001, 616 )
shape = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrowBody"]
position = Vector2( 1.319, 24 )
shape = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Crow"
anims/Crow = SubResource( 12 )

[connection signal="animation_finished" from="CrowBody/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="CrowBody/body" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="CrowBody/shitzone" to="." method="_on_shitzone_body_entered"]
